--- a/docs/report.tex
+++ b/docs/report.tex
@@ -46,12 +46,17 @@
     This project aims to show how one can parse and decode binary formats in
     Haskell, showcased by implementing an mp3 decoder. The decoder features its
     own library for handling of binary formats, a fast huffman decoder and is
-    written entirely in Haskell. The project was carried out as a 15hp course at
-    the department of computer science and engineering at the University of
-    Gothenburg during the autumn 2009.
+    written entirely in Haskell. The project was carried out as a 15hec course
+    at the department of computer science and engineering at the University of
+    Gothenburg during the autumn 2009. \\
+
+    Supervisor for this project was Ulf Norell and Koen Claesson was the
+    examiner.
 \end{abstract}
 
+\newpage
 \tableofcontents
+\newpage
 
 \section{Motivation}
     MP3 decoders exists today in most languages, however there does not exist
@@ -83,24 +88,20 @@
 
        \subsubsection{Header}
        \label{sec:header}
-\begin{figure}[h!]
-  \centering
-    \includegraphics[width=1.1\textwidth]{1000px-Mp3filestructure}
-  \caption{The mp3 header taken from wikipedia \cite{mike}}
-\end{figure}
-            \begin{itemize}
-                \item{12 bits} All ones, sync word.
-                \item{3 bits} 101 for MPEG layer 3.
-                \item{1 bit} 0 if CRC follows the frame.
-                \item{4 bits} Bitrate index.
-                \item{2 bits} Sample rate index.
-                \item{1 bit} 1 if frame is padded.
-                \item{1 bit} Private bit - not used.
-                \item{2 bits} Mode - Mono/Stereo/DualChannel/JointStereo.
-                \item{2 bits} Mode extension - only used with JointStereo.
-                \item{2 bits} Copyright data.
-                \item{2 bits} Emphasis.
-            \end{itemize}
+        \begin{tabular}{l l l}
+            \# bits & value & description \\ \hline
+            12  & All ones    & Sync word \\
+            3   & 101         & Denotes that this is MPEG layer 3 \\
+            1   & 0 if CRC    & CRC follows the frame if present \\
+            4   &             & Bitrate index. Value used for lookup in a table \\
+            2   &             & Sample rate index. See bitrate index \\
+            1   & 1 if padded & Frames might be padded \\
+            1   & N/A         & Private bit, not used \\
+            2   &             & Mode - Mono/Stereo/DualChannel/JointStereo \\
+            2   &             & Mode extension, only for JointStereo \\
+            2   &             & Copyright data \\
+            2   &             & Emphasis
+        \end{tabular}
 
             There are lots of data here that does not matter for the decoding
             process such as the copyright data and private bit, and
@@ -167,7 +168,7 @@
     \texttt{Decode.hs}.
 
     \subsection{Unpacking}
-\begin{figure}[h]
+\begin{figure}[H]
   \begin{center}
     \begin{lstlisting}
 unpackMp3 :: L.ByteString -> [SideInfo BS.BitString]
@@ -186,8 +187,9 @@ unpackMp3 = runBitGet first . BS.convert
     \texttt{SideInfo} datatypes parametrized by a \texttt{BitString}. There are
     lots of stuff that needs to be explained, clearly!
 
-    First, what is the \texttt{SideInfo} type?
-\begin{figure}[h]
+    First, what is the \texttt{SideInfo} type? Look at
+    figure \ref{fig:sideinfo_struct}!
+\begin{figure}[H]
   \begin{center}
     \begin{lstlisting}
 data SideInfo a
@@ -206,14 +208,14 @@ data SideInfo a
     \caption{The SideInfo structure.}\label{fig:sideinfo_struct}
   \end{center}
 \end{figure}
-
     So, it holds some values (\texttt{sampleRate}, \texttt{dataPointer}), some
     scale data information, and two or four \textit{granules}. There is a type
     of headers aswell, but that is only used intermediately when unpacking, so
-    it is of rather little interest.
+    it is of rather little interest. 
 
-    What is a \texttt{Granule} then? This is where the good stuff is!
-\begin{figure}[h]
+    What is a \texttt{Granule} then? This is where the good stuff is! Look at
+    the following image (figure \ref{fig:granule_type}).
+\begin{figure}[H]
   \begin{center}
     \begin{lstlisting}
 data Granule a = Granule {
@@ -247,7 +249,7 @@ data Granule a = Granule {
   , mp3Data          :: a
 } deriving Show
     \end{lstlisting}
-    \caption{A Granule at it's best}\label{fig:granule_type}
+    \caption{The core of a Granule}\label{fig:granule_type}
   \end{center}
 \end{figure}
 
@@ -265,7 +267,7 @@ data Granule a = Granule {
     simply loops and accumulates frames until there are no more frames to read.
     The interesting function here is \texttt{readHeader}, which looks as
     follows:
-\begin{figure}[h]
+\begin{figure}[H]
   \begin{center}
     \begin{lstlisting}
 readHeader :: MaybeT BitGet (MP3Header Int)
@@ -308,7 +310,7 @@ readHeader = do
     not include it here. However, we do include \texttt{readSideInfo}, since it
     is by far more interesting even though it is long.
 
-\begin{figure}[h]
+\begin{figure}[H]
   \begin{center}
     \begin{lstlisting}
 readSideInfo :: MP3Mode -> Int -> BitGet (SideInfo Int)
@@ -364,7 +366,7 @@ readSideInfo mode freq = do
     were longer a new table was returned. For those code words that were
     shorter, these were padded with all possible combinations to make it of the
     right length. It might be easier to understand with an example!
-\begin{figure}[h]
+\begin{figure}[H]
   \begin{center}
     \begin{tabular}{| l | l |}
         \hline
@@ -383,7 +385,7 @@ readSideInfo mode freq = do
 
     In this case, one might choose code word length three, which we will use in
     this example. The lookup table generated from this would look like this:
-\begin{figure}[h]
+\begin{figure}[H]
   \begin{center}
     \begin{tabular}{| l | l |}
         \hline
@@ -402,7 +404,7 @@ readSideInfo mode freq = do
                 00 & 8 \\
               \end{tabular} \\ \hline
     \end{tabular}
-    \caption{Another huffman table}\label{fig:huffmantab2}
+    \caption{A better huffman table}\label{fig:huffmantab2}
   \end{center}
 \end{figure}
 
@@ -451,7 +453,7 @@ readSideInfo mode freq = do
         \textit{Inverse Modified Discrete Cosine Transform} (IMDCT). As stated
         in ISO 11172-3, the transformation for each sample is done as
         follows:
-\begin{figure}[h]
+\begin{figure}[H]
   \begin{center}
         \[
             x_i = \sum_{k=0}^{\frac{n}{2} - 1}{X_k * cos(\frac{\pi}{2n}(2i + 1 +
@@ -467,7 +469,7 @@ readSideInfo mode freq = do
         nicer to have that code written in Haskell, so we rewrote both those
         files into Haskell versions. For the IMDCT that went extremely
         smooth:
-\begin{figure}[h]
+\begin{figure}[H]
   \begin{center}
         \begin{lstlisting}
 -- Straightforward translation from the C code.
@@ -489,7 +491,7 @@ imdct pts xs = map
   \end{center}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
   \begin{center}
         \begin{lstlisting}
 -- Straightforward translation from the C code, elegant!
@@ -588,7 +590,7 @@ imdct18 xs = map (\s -> sumZip (*) xs s) lookupIMDCT
         \texttt{BitString}.
 
         The \texttt{BitString} structure itself is rather simple:
-\begin{figure}[h]
+\begin{figure}[H]
   \begin{center}
         \begin{lstlisting}
 data BitString = Empty
@@ -612,7 +614,7 @@ data BitString = Empty
         \texttt{BitStrings} without keeping track of everything by ourselves,
         therefore we put it in a monad. This is how it looks:
 
-\begin{figure}[h]
+\begin{figure}[H]
   \begin{center}
         \begin{lstlisting}
 newtype BitGetT m a = BitGetT {
@@ -656,7 +658,7 @@ instance (Monad m) => Monad (BitGetT m) where
         code words that were larger than 10 bits, the result from a lookup in
         the table was another table. The not-so-intuitive data structure looks
         like this:
-\begin{figure}[h]
+\begin{figure}[H]
   \begin{center}
         \begin{lstlisting}
 -- SmallTable / Deep Table
@@ -669,14 +671,14 @@ type HuffDeep a  = (Int, Array Int
                          (Either (Int,a) (HuffArray a))
                    )
         \end{lstlisting}
-    \caption{Huffaray}\label{fig:huffarraycode}
+    \caption{HuffArray}\label{fig:huffarraycode}
   \end{center}
 \end{figure}
 
         But the complicated structure aside, this works very well, ever though
         \texttt{HuffTables.hs} still takes more time to compile than any other
         module.  The lookup function looks like this:
-\begin{figure}[h]
+\begin{figure}[H]
   \begin{center}
         \begin{lstlisting}
 -- Lookup a value in the huffman array
@@ -696,7 +698,7 @@ lookupHuff huff = case huff of
         | w <= 16 = liftM fromIntegral
                     (getAsWord16 $ fromIntegral w)
         \end{lstlisting}
-    \caption{Looking up huffcodes}\label{fig:lookuphuff}
+    \caption{Looking up huffman codes}\label{fig:lookuphuff}
   \end{center}
 \end{figure}
 
@@ -781,9 +783,6 @@ lookupHuff huff = case huff of
      \bibitem{lame}
        LAME
        http://lame.sourceforge.net/
-     \bibitem{mike}
-       Kim Meyrick
-       http://en.wikipedia.org/wiki/User:Kim\_Meyrick
 \end{thebibliography}
 
 \end{document}
